p2ws_package/Devpp2ws-Package/objects/Trigger_Activation__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CTI_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>CTI Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Group_Member_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Case Group Member Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Case Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compensation_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Compensation Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Crew_List_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Crew List Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Email Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flight_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Flight Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Queue_Scheduler__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Job Queue Scheduler</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Queue_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Job Queue Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passenger_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Passenger Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Task Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TempPassenger_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>TempPassenger Trigger</label>
        <type>Checkbox</type>
    </fields>
    <label>Trigger Activation</label>
</CustomObject>